[gd_scene load_steps=18 format=3 uid="uid://gior6eyndthw"]

[ext_resource type="Texture2D" uid="uid://5ntb43rhdlgf" path="res://assets/sprites/tilesets/grass.png" id="1_p4k2t"]
[ext_resource type="Script" uid="uid://b703la55eq7y3" path="res://scripts/world_scripts/world_2.gd" id="1_uxhhh"]
[ext_resource type="Texture2D" uid="uid://bx5d3louw4ri6" path="res://assets/sprites/tilesets/plains.png" id="2_4wnbh"]
[ext_resource type="Texture2D" uid="uid://bfngdbm512n5i" path="res://assets/sprites/objects/objects.png" id="3_0hg7c"]
[ext_resource type="Texture2D" uid="uid://dn3thqtdytm5e" path="res://assets/sprites/tilesets/walls/walls.png" id="4_uxhhh"]
[ext_resource type="Texture2D" uid="uid://dx0lp248rcycc" path="res://assets/sprites/tilesets/walls/wooden_door.png" id="5_m7cqh"]
[ext_resource type="Texture2D" uid="uid://cfvhainqevt57" path="res://assets/characters/Sprite-0031.png" id="6_0hg7c"]
[ext_resource type="PackedScene" uid="uid://ct2rfy2e8m43c" path="res://scenes/player.tscn" id="6_4wnbh"]
[ext_resource type="PackedScene" uid="uid://dfexe77p0u3yp" path="res://scenes/Interaction/interaction_area.tscn" id="9_m7cqh"]
[ext_resource type="Script" uid="uid://byeoom5btoal1" path="res://scripts/world_scripts/world_2_to_3_interactable_area.gd" id="9_xj6ct"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xj6ct"]
texture = ExtResource("1_p4k2t")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_60rh7"]
texture = ExtResource("2_4wnbh")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_42yqt"]
texture = ExtResource("3_0hg7c")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = 15
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.5082, 12.4049, 7.94346, 13.493, 11.2226, 20.8101, 8.99294, 25.2694, -4.97956, 24.9721, -11.2079, 19.8042)
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/y_sort_origin = 10
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 10.1198, 14.3635, 4.89665, 15.4517, -4.4614, 15.6693, -10.7726, 13.9283)
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/y_sort_origin = 15
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.33009, 17.0563, 5.73619, 17.1578, 5.43162, 19.899, -0.0507631, 21.828, -5.33009, 19.7975)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/y_sort_origin = 4
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10.555, 1.08815, -10.0334, -2.67558, 9.29022, -2.08101, 12.7313, 2.82918, 9.10374, 8.55835, -7.50953, 8.81007, -11.8608, 5.65836)
0:0/0 = 0
0:0/0/y_sort_origin = 3
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.83143, 2.18154, 0.293669, 2.09764, 6.08314, 1.92982, 1.63616, 5.45385, -1.30053, 5.45385)
0:1/0 = 0
0:1/0/y_sort_origin = 4
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 1.93237, -6.31735, -1.18915, 5.87142, -1.18915, 6.61464, 3.4188, 4.97956, 6.24303, -1.56076, 6.68896, -5.57413, 3.86473)
5:0/0 = 0
5:0/0/y_sort_origin = 2
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.33486, 6.04119, -6.33486, 0.503432, 6.16705, 0.335621, 6.16871, 6.09439)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5ye77"]
texture = ExtResource("4_uxhhh")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lpabp"]
texture = ExtResource("5_m7cqh")
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_vxik2"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_xj6ct")
sources/1 = SubResource("TileSetAtlasSource_60rh7")
sources/2 = SubResource("TileSetAtlasSource_42yqt")
sources/3 = SubResource("TileSetAtlasSource_5ye77")
sources/4 = SubResource("TileSetAtlasSource_lpabp")

[sub_resource type="CircleShape2D" id="CircleShape2D_m7cqh"]
radius = 14.0

[node name="World2" type="Node2D"]
script = ExtResource("1_uxhhh")

[node name="TileMap" type="TileMap" parent="."]
z_index = 1
y_sort_enabled = true
tile_set = SubResource("TileSet_vxik2")
format = 2
layer_0/name = "Ground"
layer_1/name = "Cliff"
layer_2/name = "doors"
layer_3/name = "Ysort"
layer_3/y_sort_enabled = true
layer_3/z_index = 1

[node name="map" type="Sprite2D" parent="."]
position = Vector2(320, 360)
texture = ExtResource("6_0hg7c")

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(15, 152, 18, 162, 18, 175, 11, 177, 16, 181, 19, 189, 28, 192, 73, 192, 85, 176, 100, 160, 135, 160, 149, 144, 164, 128, 168, 128, 168, 118, 175, 117, 178, 107, 181, 104, 187, 102, 195, 89, 196, 88, 241, 88, 241, 85, 247, 85, 250, 75, 247, 63, 249, 56, 248, 55, 248, 0, 216, 0, 216, 55, 193, 55, 140, 111, 121, 109, 107, 110, 68, 151, 46, 152, 46, 140, 26, 140, 26, 152)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(13, 152, 26, 152, 26, 139, 46, 139, 46, 152, 66, 152, 79, 141, 85, 132, 96, 120, 104, 112, 140, 110, 145, 103, 151, 102, 152, 96, 157, 93, 163, 86, 168, 79, 174, 78, 175, 71, 182, 70, 184, 63, 191, 61, 193, 53, 216, 56, 216, 0, 13, 116)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(14, 151, 14, 160, 18, 162, 18, 171, 15, 175, 15, 181, 19, 189, 29, 192, 69, 192, 80, 186, 82, 179, 85, 176, 94, 170, 100, 160, 128, 160, 138, 157, 146, 147, 164, 128, 170, 117, 181, 104, 187, 102, 193, 94, 196, 88, 237, 88, 248, 82, 253, 72, 248, 68, 247, 62, 248, 55, 248, 1, 215, 1, 215, 0, 249, 0, 272, 82, 128, 197, 36, 227, 7, 192, 7, 143)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(310, 720, 310, 693, 284, 665, 277, 659, 51, 659, 16, 627, 19, 595, 57, 570, 57, 563, 78, 563, 78, 570, 102, 570, 135, 604, 361, 604, 392, 572, 422, 571, 457, 603, 615, 603, 616, 625, 581, 662, 451, 662, 395, 720, 401, 723, 631, 668, 634, 539, 9, 543, 4, 683)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(314, 87, 314, 107, 312, 117, 317, 125, 325, 128, 364, 128, 375, 122, 375, 102, 375, 87, 357, 87, 357, 75, 338, 75, 338, 87, 315, 87, 314, 62, 390, 62, 387, 125, 322, 140, 302, 111, 312, 85, 315, 85, 315, 87)

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(471, 55, 473, 72, 474, 82, 470, 91, 481, 104, 525, 104, 539, 91, 534, 78, 535, 53, 502, 53, 502, 43, 482, 43, 482, 53, 471, 53, 472, 30, 548, 33, 548, 103, 488, 121, 459, 99, 460, 62, 467, 51, 470, 50, 471, 51)

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(20, 429, 33, 439, 18, 440, 18, 443, 15, 452, 19, 461, 37, 464, 75, 464, 101, 464, 114, 451, 110, 442, 114, 423, 108, 420, 91, 423, 86, 431, 77, 439, 53, 439, 53, 427, 33, 427, 33, 440, 18, 428, 22, 398, 75, 395, 112, 395, 122, 420, 120, 472, 53, 477, 18, 475, 5, 462, 6, 434)

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(129, 336, 142, 351, 153, 351, 153, 339, 174, 339, 174, 351, 186, 351, 186, 356, 255, 356, 270, 356, 279, 346, 279, 312, 282, 307, 282, 299, 303, 299, 303, 311, 314, 320, 310, 333, 311, 347, 313, 360, 311, 371, 316, 377, 305, 390, 298, 392, 258, 392, 255, 386, 184, 386, 181, 392, 138, 392, 128, 381, 130, 362, 129, 346, 131, 332, 126, 334, 120, 386, 135, 404, 198, 405, 294, 403, 319, 382, 317, 371, 319, 317, 308, 281, 268, 283, 258, 307, 254, 341, 149, 333)

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(337, 373, 337, 363, 358, 363, 358, 373, 373, 373, 383, 363, 384, 383, 397, 399, 455, 399, 455, 411, 438, 417, 336, 417, 328, 410, 328, 396, 328, 376, 335, 373, 323, 374, 322, 419, 456, 424, 461, 385, 362, 349, 331, 354, 328, 373)

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(477, 350, 490, 350, 490, 339, 510, 339, 510, 350, 533, 350, 544, 336, 544, 259, 544, 216, 552, 216, 559, 224, 567, 224, 575, 216, 602, 216, 602, 203, 622, 203, 622, 216, 627, 216, 623, 230, 626, 243, 621, 253, 604, 257, 576, 257, 576, 336, 575, 355, 575, 371, 562, 376, 480, 376, 472, 371, 472, 356, 472, 345, 465, 359, 467, 377, 492, 387, 586, 382, 605, 262, 633, 259, 631, 191, 538, 195, 521, 286, 513, 330, 475, 335, 462, 350)

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(210, 206, 210, 195, 230, 195, 230, 207, 245, 207, 255, 198, 256, 180, 400, 180, 426, 182, 426, 171, 446, 171, 446, 183, 455, 183, 455, 195, 458, 205, 450, 214, 445, 216, 402, 216, 399, 212, 264, 212, 274, 227, 266, 237, 261, 240, 218, 240, 209, 235, 209, 206, 202, 207, 198, 230, 206, 247, 235, 254, 270, 255, 286, 222, 414, 223, 469, 222, 460, 159, 417, 157, 313, 167, 211, 172, 201, 192, 201, 206)

[node name="Player" parent="." instance=ExtResource("6_4wnbh")]
position = Vector2(90, 632)
current_ball = "dragon_ball_2"

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 635
limit_bottom = 715
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="SpawnPoints" type="Node" parent="."]

[node name="SpawnPoint2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(504, 363)

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(68, 563)
script = ExtResource("9_xj6ct")

[node name="InteractionArea" parent="StaticBody2D2" instance=ExtResource("9_m7cqh")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2/InteractionArea"]
shape = SubResource("CircleShape2D_m7cqh")

[connection signal="body_entered" from="StaticBody2D2/InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="StaticBody2D2/InteractionArea" to="." method="_on_interaction_area_body_exited"]
